--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,6 +192,7 @@ allow 172.104.186.73;
 allow 172.104.243.155;
 allow 172.104.244.62;
 allow 172.105.174.195;
+allow 172.105.20.12;
 allow 172.232.209.254;
 allow 172.233.240.180;
 allow 172.233.82.41;
@@ -663,7 +664,6 @@ allow 199.195.253.180;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b40:5700:983c::1;
 allow 2001:1b60:2:1:3935:104:0:1;
-allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -985,6 +985,7 @@ allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
+allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c07::f03c:95ff:fe1e:22e;
 allow 2600:3c0a::f03c:95ff:fe1e:2a6;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
@@ -1266,7 +1267,6 @@ allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1512,9 +1512,11 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
+allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
+allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
-allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
-allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
+allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
@@ -1837,7 +1839,6 @@ allow 51.38.225.46;
 allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1950,7 +1951,6 @@ allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
-allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 88.80.20.86;
