--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -274,6 +274,7 @@ deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
 deny 185.132.53.6;
+deny 185.14.31.113;
 deny 185.146.232.234;
 deny 185.150.28.13;
 deny 185.154.110.142;
@@ -970,7 +971,6 @@ deny 2401:c080:1c02:2d4::;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8000:239::;
 deny 2402:1f00:8100:400::9;
-deny 2407:1c00:6100:5640::;
 deny 2407:3640:2207:8882::1;
 deny 2407:3640:2259:6302::1;
 deny 2407:3641:2259:8208::1;
@@ -1267,6 +1267,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
@@ -1483,6 +1484,7 @@ deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4df8::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
 deny 2a0d:bbc7:0:1::1df;
@@ -1517,6 +1519,7 @@ deny 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 deny 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 deny 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 deny 2a0e:97c0:3e3:460:1337:b10b:1337:8;
+deny 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
@@ -1556,54 +1559,6 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
-deny 2a10:1fc0:10::19eb:717b;
-deny 2a10:1fc0:10::28fc:90d4;
-deny 2a10:1fc0:10::2a17:5b54;
-deny 2a10:1fc0:10::2cf4:6ba2;
-deny 2a10:1fc0:10::2d91:1a2d;
-deny 2a10:1fc0:10::3903:457;
-deny 2a10:1fc0:10::3919:de17;
-deny 2a10:1fc0:10::3a1:5e9f;
-deny 2a10:1fc0:10::3dc5:e694;
-deny 2a10:1fc0:10::3eb3:d1d0;
-deny 2a10:1fc0:10::3ec1:2b1e;
-deny 2a10:1fc0:10::40d8:83c;
-deny 2a10:1fc0:10::42d2:f78b;
-deny 2a10:1fc0:10::5138:4dfa;
-deny 2a10:1fc0:10::5719:261d;
-deny 2a10:1fc0:10::61d9:7617;
-deny 2a10:1fc0:10::61e2:c84d;
-deny 2a10:1fc0:10::627f:3c31;
-deny 2a10:1fc0:10::694a:c359;
-deny 2a10:1fc0:10::6b4c:30fc;
-deny 2a10:1fc0:10::6c2e:469a;
-deny 2a10:1fc0:10::6d92:d6ab;
-deny 2a10:1fc0:10::6fde:4b8d;
-deny 2a10:1fc0:10::792f:38b4;
-deny 2a10:1fc0:10::895d:abf9;
-deny 2a10:1fc0:10::8a03:d023;
-deny 2a10:1fc0:10::8b78:d42e;
-deny 2a10:1fc0:10::8d4d:eca2;
-deny 2a10:1fc0:10::9a73:d4f2;
-deny 2a10:1fc0:10::9d80:c9f7;
-deny 2a10:1fc0:10::9e08:e765;
-deny 2a10:1fc0:10::a3a5:49da;
-deny 2a10:1fc0:10::a458:8b37;
-deny 2a10:1fc0:10::a63c:724c;
-deny 2a10:1fc0:10::b571:1205;
-deny 2a10:1fc0:10::bf3f:d195;
-deny 2a10:1fc0:10::c129:61a1;
-deny 2a10:1fc0:10::c385:c7fa;
-deny 2a10:1fc0:10::c7c7:2f84;
-deny 2a10:1fc0:10::d5a6:a292;
-deny 2a10:1fc0:10::d5d0:db30;
-deny 2a10:1fc0:10::d6b7:b3e9;
-deny 2a10:1fc0:10::dbe0:6173;
-deny 2a10:1fc0:10::dbe9:7852;
-deny 2a10:1fc0:10::e4c8:9020;
-deny 2a10:1fc0:10::ea87:5496;
-deny 2a10:1fc0:10::fa6c:cac5;
-deny 2a10:1fc0:10::fdb0:ba7f;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:1467::;
@@ -1826,7 +1781,6 @@ deny 46.182.21.248;
 deny 46.23.109.25;
 deny 46.232.251.191;
 deny 46.234.47.105;
-deny 46.249.49.183;
 deny 46.250.243.29;
 deny 46.30.188.218;
 deny 46.38.243.210;
@@ -1839,6 +1793,7 @@ deny 51.38.225.46;
 deny 51.81.222.62;
 deny 5.181.80.107;
 deny 5.196.95.34;
+deny 5.255.100.219;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1922,30 +1877,6 @@ deny 84.19.182.20;
 deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
-deny 85.239.55.11;
-deny 85.239.55.110;
-deny 85.239.55.112;
-deny 85.239.55.114;
-deny 85.239.55.123;
-deny 85.239.55.132;
-deny 85.239.55.168;
-deny 85.239.55.173;
-deny 85.239.55.174;
-deny 85.239.55.184;
-deny 85.239.55.189;
-deny 85.239.55.192;
-deny 85.239.55.201;
-deny 85.239.55.228;
-deny 85.239.55.230;
-deny 85.239.55.239;
-deny 85.239.55.24;
-deny 85.239.55.249;
-deny 85.239.55.25;
-deny 85.239.55.250;
-deny 85.239.55.31;
-deny 85.239.55.37;
-deny 85.239.55.51;
-deny 85.239.55.80;
 deny 85.93.218.204;
 deny 86.54.28.49;
 deny 87.118.110.27;
@@ -1985,34 +1916,11 @@ deny 91.208.75.3;
 deny 91.208.75.4;
 deny 91.219.236.101;
 deny 91.219.236.91;
-deny 91.227.77.107;
-deny 91.227.77.108;
-deny 91.227.77.119;
-deny 91.227.77.125;
-deny 91.227.77.139;
-deny 91.227.77.158;
-deny 91.227.77.160;
-deny 91.227.77.181;
-deny 91.227.77.193;
-deny 91.227.77.200;
-deny 91.227.77.208;
-deny 91.227.77.209;
-deny 91.227.77.226;
-deny 91.227.77.229;
-deny 91.227.77.237;
-deny 91.227.77.25;
-deny 91.227.77.31;
-deny 91.227.77.36;
-deny 91.227.77.44;
-deny 91.227.77.48;
-deny 91.227.77.51;
-deny 91.227.77.54;
-deny 91.227.77.62;
-deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
 deny 92.243.24.163;
 deny 92.246.84.133;
+deny 93.113.25.110;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.158.156;
@@ -2042,5 +1950,4 @@ deny 95.142.161.63;
 deny 95.143.193.125;
 deny 95.211.244.28;
 deny 95.216.107.148;
-deny 97.74.89.52;
 deny 98.128.173.33;
