--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,6 +1,7 @@
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b40:5700:983c::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
+set_real_ip_from 2001:1b60:3:221:3132:102:0:1;
 set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
@@ -662,6 +663,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
